--- a/Pokemon.React/src/App.css
+++ b/Pokemon.React/src/App.css
@@ -1,10 +1,3 @@
-#root {
-  /* max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center; */
-}
-
 .pokemon-card{
   width: 200px;
   height: 200px;
@@ -13,6 +6,25 @@
 
 .pokemon-card .card-body{
   text-align: center;
+}
+
+@media (max-width: 700px) {
+  .pokemon-card{
+    width: 300px;
+    height: 300px;
+  }
+
+  .pokemon-card img{
+    width: 200px;
+    height: 200px;
+  }
+}
+
+@media (min-width: 900px) {
+  .pokemon-card img{
+    width: 125px;
+    height: 125px;
+  }
 }
 
 .pokemon-detail-card{
@@ -28,49 +40,22 @@
   vertical-align: top;
 }
 
-.pokemon-detail-image img{
-  width: "200px";
-  height: "200px;";
+@media (max-width: 700px) {
+  .pokemon-detail-image{
+    width: 200px;
+    height: 200px;
+  }
 }
 
-.pokemon-detail-stats{
-  display: inline-block;
-  margin-left: 200px;
-  /* border: 2px solid green; */
-  padding-top: 50px;
-  /* vertical-align: top; */
+@media (min-width: 900px) {
+  .pokemon-detail-image{
+    width: 500px;
+    height: 500px;
+  }
 }
-
-.table{
-
-  /* margin-top: 100px; */
-  /* vertical-align: center; */
-  /* position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      width: 30%;
-      height: 30%;
-      margin: auto; */
-}
-
-.pokemon-detail-stats .table td{
-  border: none;
-}
-
-/*.pokemon-detail-stats table tr td ol{
-   padding: 0 25px; 
-  margin: 0 10px;
-}*/
-
 
 .data-label{
   font-weight: bold;
-}
-
-.data-value{
-  margin: 0 10px;
 }
 
 .type {
